--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,11 @@ h6,
 .blog-item:hover img {
     transform: scale(1.1);
 }
+
+.navbar-brand .logo {
+    height: 50px; /* Adjust height as needed */
+    margin-right: 10px;
+}
+.brand-text{
+    font-weight: bold;
+}
